--- a/3-Data-preparation.qmd
+++ b/3-Data-preparation.qmd
@@ -309,18 +309,19 @@ This command replaces each `NA` in the `y` column with a randomly selected value
 
 To assess the effect of imputation visually, the scatter plots below show the relationship between diamond width (`y`) and price before and after imputation:
 
+
 ```{r}
 #| layout-ncol: 2
 #| fig-width: 4
 #| fig-height: 4
 
-ggplot(data = diamonds, aes(x = y, y = price)) + 
-  geom_point(color = "blue", size = 0.3) +
-  ggtitle("Original Distribution (with Outliers)")
+ggplot(diamonds, aes(x = y, y = price)) + 
+  geom_point(color = "#377EB8", size = 0.5, alpha = 0.6) +
+  labs(title = "With Outliers", x = "Diamond Size (y)", y = "Price") 
 
-ggplot(data = diamonds_2, aes(x = y, y = price)) + 
-  geom_point(color = "blue", size = 0.3) +
-  ggtitle("After Random Sampling Imputation")
+ggplot(diamonds_2, aes(x = y, y = price)) + 
+  geom_point(color = "#377EB8", size = 0.5, alpha = 0.6) +
+  labs(title = "After Imputation", x = "Diamond Size (y)", y = "Price") 
 ```
 
 These plots illustrate that after removing implausible values and imputing missing entries, the data retains its overall structure while discarding extremes that could distort model training. Since price is our eventual target variable (see Chapter [-@sec-ch10-regression]), this visualization also helps assess whether the cleaned `y` values still support meaningful patterns.
