--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -198,7 +198,7 @@ To better understand the logic behind these decisions, consider the analogy of a
 
 ::: {#tbl-hypothesis-errors .table}
 | *Decision*          | *Reality:* $H_0$ is True                               | *Reality:* $H_0$ is False                          |
-|------------------|----------------------------|--------------------------|
+|---------------------|--------------------------------------------------------|----------------------------------------------------|
 | Do not Reject $H_0$ | *Correct Decision*: Acquit an innocent person.         | *Type II Error (*$\beta$): Acquit a guilty person. |
 | Reject $H_0$        | *Type I Error (*$\alpha$): Convict an innocent person. | *Correct Decision*: Convict a guilty person.       |
 
@@ -217,7 +217,7 @@ Many learners find it challenging to identify which test suits their specific qu
 
 ::: {#tbl-hypothesis-test .table}
 | Test                         | Null Hypothesis ($H_0$)      | Applied To                                     |
-|--------------------|--------------------|--------------------------------|
+|------------------------------|------------------------------|------------------------------------------------|
 | One-sample t-test            | $H_0: \mu = \mu_0$           | Single numerical variable                      |
 | Test for Proportion          | $H_0: \pi = \pi_0$           | Single categorical variable                    |
 | Two-sample t-test            | $H_0: \mu_1 = \mu_2$         | Numerical outcome by binary group              |
@@ -351,7 +351,7 @@ In Chapter [-@sec-ch4-EDA], Section [-@sec-EDA-sec-numeric], we explored the rel
 
 ggplot(data = churn) +
   geom_boxplot(aes(x = churn, y = intl.calls), 
-               fill = c("palevioletred1", "darkseagreen1"))
+               fill = c("#F4A582", "#A8D5BA"))
 
 ggplot(data = churn) +
   geom_density(aes(x = intl.calls, fill = churn), alpha = 0.3)
@@ -406,11 +406,11 @@ In Chapter [-@sec-chapter-EDA-categorical], we explored the relationship between
 
 ggplot(data = churn) + 
   geom_bar(aes(x = voice.plan, fill = churn)) +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
 
 ggplot(data = churn) + 
   geom_bar(aes(x = voice.plan, fill = churn), position = "fill") +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+  scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
 ```
 
 The left plot shows raw churn counts across Voice Mail Plan categories, while the right plot shows proportional differences. Customers without a Voice Mail Plan appear more likely to churn. To test whether this visual pattern reflects a statistically significant difference, we define the hypotheses:
@@ -467,11 +467,11 @@ data(bank)
 
 ggplot(data = bank) + 
     geom_bar(aes(x = marital, fill = deposit)) +
-    scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+    scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
 
 ggplot(data = bank) + 
     geom_bar(aes(x = marital, fill = deposit), position = "fill") +
-    scale_fill_manual(values = c("palevioletred1", "darkseagreen1")) 
+    scale_fill_manual(values = c("#F4A582", "#A8D5BA")) 
 ```
 
 The first plot shows the raw counts of deposit outcomes across marital categories, while the second plot presents relative proportions. The visuals suggest possible differences in behavior among marital groups, but we need statistical evidence to determine whether these differences are significant.
@@ -520,7 +520,7 @@ data(diamonds)
 
 ggplot(data = diamonds) + 
   geom_boxplot(aes(x = cut, y = price, fill = cut)) +
-  scale_fill_manual(values = c("palevioletred1", "darkseagreen1", "skyblue1", "gold1", "lightcoral"))
+  scale_fill_manual(values = c("#F4A582", "#FDBF6F", "#FFFFBF", "#A6D5BA", "#1B9E77"))
 ```
 
 The box plot shows the distribution and median prices for each cut category. The plots suggest some variation in price across the different cut categories, but they do not reveal a clear association between `price` and `cut`. Therefore, we proceed with statistical testing to determine whether the observed differences are statistically meaningful.
@@ -558,9 +558,9 @@ The *correlation test* evaluates both the strength and direction of a relationsh
 To illustrate, we examine whether a significant relationship exists between `carat` (diamond weight) and `price` in the *diamonds* dataset from the **ggplot2** package. A positive correlation is anticipated between these variables, as larger diamonds typically command higher prices. We begin with a scatter plot to visually assess the relationship:
 
 ```{r}
-ggplot(data = diamonds) +
-    geom_point(aes(x = carat, y = price), colour = "blue") +
-    labs(x = "Carat", y = "Price") 
+ggplot(diamonds, aes(x = carat, y = price)) +
+  geom_point(color = "#377EB8", alpha = 0.3, size = 0.6) +
+  labs(x = "Diamond Weight (Carats)", y = "Price (USD)")
 ```
 
 The scatter plot reveals a clear upward trend, suggesting that as carat increases, price tends to rise as well. However, visualization alone does not provide formal statistical evidence. To test the relationship more rigorously, we define the following hypotheses:
