--- a/8-Model-evaluation.qmd
+++ b/8-Model-evaluation.qmd
@@ -365,8 +365,8 @@ roc_knn <- roc(response = test_labels, predictor = kNN_prob[, "yes"])
 We then use the `ggroc()` function to visualize the ROC curve. It takes an ROC object and generates a `ggplot2` visualization for easier customization and clearer display:
 
 ```{r roc-knn-churn, out.width = "65%", fig.cap = "ROC curve for kNN with k = 9, based on churn data."}
-ggroc(roc_knn, colour = "blue") +
-    ggtitle("ROC curve for kNN with k = 9, based on churn data")
+ggroc(roc_knn, colour = "#377EB8") +
+    ggtitle("ROC Curve for kNN with k = 9")
 ```
 
 This ROC curve shows how the model’s true positive rate and false positive rate vary as we adjust the classification threshold. A curve closer to the top-left corner indicates better classification performance. In this case, the ROC curve suggests that the kNN model is effective at distinguishing churners from non-churners.
