--- a/9-Naive-Bayes.qmd
+++ b/9-Naive-Bayes.qmd
@@ -434,7 +434,8 @@ library(pROC)
 
 roc_naive_bayes = roc(test_labels, prob_naive_bayes)
 
-ggroc(roc_naive_bayes)
+ggroc(roc_naive_bayes, colour = "#377EB8", size = 1) +
+    ggtitle("ROC Curve for Naive Bayes")
 ```
 
 The ROC curve plots the *true positive rate* (sensitivity) against the *false positive rate* (1 - specificity) at various thresholds. A curve that bows toward the top-left corner indicates strong discriminative performance, reflecting a high sensitivity with a low false positive rate.
