--- a/11-Tree-based-models.qmd
+++ b/11-Tree-based-models.qmd
@@ -602,18 +602,18 @@ forest_roc = roc(test_labels, forest_probs)
 Instead of viewing the models separately, let us put them all on the same plot using `ggroc()`:
 
 ```{r out.width = "90%"}
-ggroc(list(cart_roc, C50_roc, forest_roc), size = 0.8) + 
-  ggtitle("ROC Curves with AUC for Three Models") +
-  scale_color_manual(values = 1:3,
-    labels = c(paste("CART; AUC =", round(auc(cart_roc), 3)),
-                paste("C5.0; AUC =", round(auc(C50_roc), 3)),
-                paste("Random Forest; AUC =", round(auc(forest_roc), 3)))) +
-  theme(legend.title = element_blank(),
-        legend.position = c(.7, .3),
-        text = element_text(size = 17))
+ggroc(list(cart_roc, C50_roc, forest_roc), size = 0.9) +
+  scale_color_manual(values = c("#377EB8", "#E66101", "#4DAF4A"),
+                     labels = c(
+                       paste("CART (AUC =", round(auc(cart_roc), 3), ")"),
+                       paste("C5.0 (AUC =", round(auc(C50_roc), 3), ")"),
+                       paste("Random Forest (AUC =", round(auc(forest_roc), 3), ")")
+                     )) +
+  ggtitle("ROC Curves with AUC for Three Models") + 
+  theme(legend.title = element_blank(), legend.position = c(.7, .3))
 ```
 
-In the ROC plot, the *black* curve represents CART, the [*red*]{style="color:red"} curve represents C5.0, and the [*green*]{style="color:green"} curve represents Random Forest. Take a moment to study the curves: Which model consistently stays closest to the top-left corner (the sweet spot for perfect classification)?
+In the ROC plot, the [*blue*]{style="color:blue"} curve represents CART, the [*orange*]{style="color:orange"} curve represents C5.0, and the [*green*]{style="color:green"} curve represents Random Forest. Take a moment to study the curves: Which model consistently stays closest to the top-left corner (the sweet spot for perfect classification)?
 
 The AUC values confirm what the eye suggests:
 
