--- a/13-Clustering.qmd
+++ b/13-Clustering.qmd
@@ -98,16 +98,16 @@ euclidean_distance <- sqrt(sum((point1 - point2)^2))
 
 # Plot
 ggplot(points_df, aes(x = x, y = y)) +
-  geom_text(aes(label = label), vjust = -1.3, size = 5, color = "blue") +
+  geom_text(aes(label = label), vjust = -1.3, size = 5, color = "#377EB8") +
   geom_segment(data = segment_df,
                aes(x = x, y = y, xend = xend, yend = yend),
-               color = "darkorange", size = 1) +
-  annotate("text", x = 3.2, y = 5.4,
+               color = "#E66101", size = 1) +
+  annotate("text", x = 2.8, y = 5.4,
            label = paste0("Distance = ", round(euclidean_distance, 2)),
-           color = "darkorange", size = 5.5) +
-  geom_point(size = 4, color = "blue") +
+           color = "#E66101", size = 5.5) +
+  geom_point(shape = 21, size = 4, stroke = 0.8, fill = "white", color = "#377EB8") +
   xlim(0, 8) + ylim(0, 8) +
-  theme_minimal() +
+  #coord_fixed(xlim = c(0, 8), ylim = c(0, 8), expand = TRUE) +
   labs(x = "X", y = "Y", title = "Euclidean Distance Between Two Points")
 ```
 
@@ -351,13 +351,13 @@ To visualize the effect of min-max scaling, we compare the distribution of the `
 #| fig-width: 4.5
 #| fig-height: 4
 
-ggplot(data = cereal) +
-    geom_histogram(aes(x = sodium), color = "white", fill = "#2C7BB6") +
-    ggtitle("Before min-max scaling")
+ggplot(cereal, aes(x = sodium)) +
+    geom_histogram(color = "white", fill = "#2C7BB6") +
+    labs(x = "Sodium (mg)", y = "Count", title = "Before Min–Max Scaling")
 
-ggplot(data = cereal_mm) +
-    geom_histogram(aes(x = sodium), color = "white", fill = "#2C7BB6") + 
-    ggtitle("After min-max scaling")
+ggplot(cereal_mm, aes(x = sodium)) +
+    geom_histogram(color = "white", fill = "#2C7BB6") + 
+    labs(x = "Scaled Sodium [0–1]", y = "Count", title = "After Min–Max Scaling")
 ```
 
 As shown in the histograms, the sodium feature is rescaled to the $[0, 1]$ range. This prevents variables like sodium or potassium (originally measured in large units) from overpowering the clustering process.
