--- a/packages.bib
+++ b/packages.bib
@@ -159,6 +159,14 @@
   url = {https://github.com/bips-hb/neuralnet},
 }
 
+@Manual{R-patchwork,
+  title = {patchwork: The Composer of Plots},
+  author = {Thomas Lin Pedersen},
+  year = {2024},
+  note = {R package version 1.3.0},
+  url = {https://patchwork.data-imaginist.com},
+}
+
 @Manual{R-plyr,
   title = {plyr: Tools for Splitting, Applying and Combining Data},
   author = {Hadley Wickham},
